Bug ZK-2290: Missing horizontal scrollbar when resizing listbox column

--- a/src/main/resources/web/atlantic/js/zul/sel/less/tree.less
+++ b/src/main/resources/web/atlantic/js/zul/sel/less/tree.less
@@ -43,6 +43,7 @@
 		padding: @paddingSmall @paddingSize !important;
 		line-height: @buttonHeight - @paddingSmall * 2;
 		text-align: center;
+		height: 1px;
 	}
 	//tree footer div
 	&-footer {
